lanecwe-Prod/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <label>xHOLD-Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Motion pictures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural production - crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture production livestock and animal specialities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing, hunting and trapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and gas extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and quarrying of nonmetallic minerals, except fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building construction-general contractors and operative builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy construction other than building construction - contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction - special trade contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and kindred products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textile mill products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel and other finished products made from fabrics and similar materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumber and wood products, except furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture and fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and allied products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing, publishing, and allied industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals and allied products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petroleum refining and related industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber and miscellaneous plastics products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather and leather products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stone, clay, glass and concrete products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary metal industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabricated metal products, except machinery and transportation equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial and commercial machinery and computer equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic and other electrical equipment and components, except computer equ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Product_Family_Interest__c</fullName>
        <description>FORMULA FIELD: Resolves the value of the &quot;Initial Product Interest&quot; field into the appropriate product family.</description>
        <formula>CASE(TEXT( Product_Interest__c ),&quot;Audio: GlobalMeet Audio&quot;,&quot;Automated&quot;,
&quot;Audio: Attended&quot;, &quot;Operator Assisted&quot;,
&quot;Audio: Reservationless Audio&quot;, &quot;Automated&quot;,
&quot;Bundle: Reservationless Audio with ReadyConnect Web&quot;, &quot;Automated&quot;,
&quot;Audio: GlobalMeet Audio for Microsoft Lync&quot;,&quot;Automated&quot;,
&quot;Audio: GlobalMeet Hybrid Audio for Lync Server&quot;,&quot;Automated&quot;,
&quot;Audio: GlobalMeet Hybrid Audio for WebEx&quot;,&quot;Automated&quot;,
&quot;Audio: iMeetLive Managed Event&quot;,&quot;Automated&quot;,
&quot;Audio: OnNet&quot;,&quot;Web: OnNet&quot;,
&quot;Audio: Op. Assisted: Premium Event&quot;,&quot;Operator Assisted&quot;,
&quot;Audio: Op. Assisted: Standard Auditorium&quot;,&quot;Operator Assisted&quot;,
&quot;Bundle: GlobalMeet&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Bundle: GlobalMeet Webinar&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Bundle: iMeet&quot;,&quot;Web: iMeet&quot;,
&quot;Bundle: iMeet Video Room Integration&quot;,&quot;Web: iMeet&quot;,
&quot;Partner: Partner BD&quot;,&quot;Partner BD&quot;,
&quot;Video: Managed Conference&quot;,&quot;Video&quot;,
&quot;Video: Managed Service - Device&quot;,&quot;Video&quot;,
&quot;Video: Managed Service - Flat Rate&quot;,&quot;Video&quot;,
&quot;Video: Professional Service&quot;,&quot;Video&quot;,
&quot;Web: AdobeConnect&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: Cisco WebEx&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: GlobalMeet&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: GlobalMeet Active Host&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: GlobalMeet Webinar&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: iMeet Agenday Enterprise&quot;,&quot;Web: iMeet Agenday&quot;,
&quot;Web: iMeetLive&quot;,&quot;Web&quot;,
&quot;Web: iMeetLive Managed Event&quot;,&quot;Web: iMeetLive&quot;,
&quot;Web: iMeet Projects&quot;,&quot;Web: iMeet Projects&quot;,
&quot;Web: Microsoft Office Live Meeting&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: NASDAQ&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: ON24&quot;,&quot;Web: 3rd Party&quot;,
&quot;Audio: iMeet&quot;,&quot;Automated&quot;,
&quot;Web: GlobalMeet Web for Microsoft Lync&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: iMeet&quot;,&quot;Web: iMeet&quot;,
&quot;Web: vCube&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: Webcast&quot;,&quot;Web: 3rd Party&quot;,
&quot;Operator Assisted : Services : SoundByte Basic&quot;,&quot;Operator Assisted&quot;,
&quot;Other Services : Learning Communications Platform&quot;,&quot;Operator Assisted&quot;,
&quot;Other Services: Learning Communications Platform&quot;,&quot;Operator Assisted&quot;,
&quot;Web : Brainshark&quot;,&quot;Web: 3rd Party Other&quot;,
&quot;Web : Event Center (Vcall)&quot;,&quot;Web: 3rd Party Other&quot;,
&quot;Web : Host Controls&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web : IBM Lotus Live Meetings&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web : ReadyConference Plus Microsite&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web : ReadyConference Plus Web&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: AVI/SPL&quot;,&quot;Web: 3rd Party Other&quot;,
&quot;Web: Brainshark&quot;,&quot;Web: 3rd Party Other&quot;,
&quot;Web: IBM Lotus Live Meetings&quot;,&quot;Web: 3rd Party&quot;,
&quot;Web: Outlook Toolbar&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: ReadyConference Plus Microsite&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web: ReadyConference Plus Web&quot;,&quot;Web: GlobalMeet&quot;,
&quot;Web : AVI/SPL&quot;,&quot;Web: 3rd Party Other&quot;,
&quot;&quot;,	&quot;&quot;,
&quot;UNDEFINED&quot;
)</formula>
        <inlineHelpText>The product family that correlate to the value of the &quot;Initial Product Interest&quot; field.</inlineHelpText>
        <label>Initial Product Family Interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>used to set the preferred language for the lead</description>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_modified_Date_by_non_admin__c</fullName>
        <description>Date/Time field that is set via WF Rule whenever a non-admin updates an Account in SFDC. Used to see rep neglecting account trends, etc.</description>
        <label>Last modified Date by (non-admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_modified_by_non_admin__c</fullName>
        <defaultValue>$User.FirstName + $User.LastName</defaultValue>
        <label>Last modified by (non-admin)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Channel_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Owner_Copy__r.Channel__c ),IF(BEGINS ( OwnerId , &quot;00G&quot;), &quot;Marketing Queue Lead&quot;,&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Channel-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Copy__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Lead Created Date (Copy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <formula>HubSpot_Inc__HubSpot_Intelligence__r.HubSpot_Inc__Lead_Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Location_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), Owner_Copy__r.Location__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Location-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Routed_by_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the S&amp;M DB user to set to true once a lead has been reassigned based on the routing process.  A workflow rule will send out an email notification once this has been set to true.</description>
        <label>Lead Routed by DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <defaultValue>LEFT($User.FirstName, 1) +  $User.LastName + TEXT(TODAY())</defaultValue>
        <description>Used for AAE reps as they build their lists each week</description>
        <label>List Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Lead Owner&apos;s Management Level Report from SFDC user record</description>
        <label>Management Level Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_ID__c</fullName>
        <label>xHOLD-Mail ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Use this formula field so when a manager looks at report, he/she only see&apos;s current user’s direct reports.</description>
        <formula>Owner:User.ManagerId  =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>See Managers Direct reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Channel__c</fullName>
        <label>Marketing Channel</label>
        <picklist>
            <picklistValues>
                <fullName>NA: Demand Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Strat Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA: Baking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In_Timestamp__c</fullName>
        <description>stamps the time that this email address opted into marketing emails</description>
        <label>Marketing Opt-In Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true on web forms that customers opt-in to marketing emails</description>
        <label>Marketing Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>x-Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Licenses_Users__c</fullName>
        <label>Number of Licenses/Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Omniture_Campaign_Code_Copy__c</fullName>
        <label>Omniture Campaign Code (Copy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omniture_Campaign_Code_No_Match_Found__c</fullName>
        <label>Omniture Campaign Code (No Match Found)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omniture_Campaign_Code__c</fullName>
        <label>Omniture Campaign Code</label>
        <picklist>
            <picklistValues>
                <fullName>ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PURPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO COLOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKY BLUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIME GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIOLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPPER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orginal_Creator__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Orginal Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to better see the User object</description>
        <label>Owner Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Owner_Copy__r.Region__c ),IF(BEGINS ( OwnerId , &quot;00G&quot;), &quot;Marketing Queue Lead&quot;,&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <label>Owner Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>IF(BEGINS( OwnerId , &apos;005&apos;) , &quot;User&quot;, &quot;Queue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Email__c</fullName>
        <description>Houses the EMployees email address temporarily for the EMployee referral program for iMeet</description>
        <label>PGi Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PGi_First_Name__c</fullName>
        <description>Temp field to house employee first name for employee referral program</description>
        <label>PGi First Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Last_Name__c</fullName>
        <label>PGi Last Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGi_Phone__c</fullName>
        <label>PGi Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Leads</relationshipLabel>
        <relationshipName>Lead_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Status of the Potential Account Match</inlineHelpText>
        <label>Related Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Initial Product of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Audio: GlobalMeet Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: GlobalMeet Audio for Microsoft Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: GlobalMeet Hybrid Audio for Lync Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: GlobalMeet Hybrid Audio for WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: iMeetLive Managed Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: OnNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: Op. Assisted: Premium Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio: Op. Assisted: Standard Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle: GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle: GlobalMeet Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle: iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle: iMeet Video Room Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner: Partner BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video: Managed Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video: Managed Service - Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video: Managed Service - Flat Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video: Professional Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: AdobeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: Cisco WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet Active Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet Web for Microsoft Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: iMeet Agenday Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: iMeetLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: iMeetLive Managed Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: iMeet Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: Microsoft Office Live Meeting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Collaboration_Needs__c</fullName>
        <label>Prospect Collaboration Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Audio Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcasts/Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Assisted Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Primary_Provider__c</fullName>
        <label>Prospect Primary Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkadin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueJeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToMeeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToWebinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polycom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Address_1__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Address_2__c</fullName>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Company_Name__c</fullName>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Country_Name__c</fullName>
        <label>Country Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Employee_Total_Count_c__c</fullName>
        <label>Employee Total Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_NAICS_Code__c</fullName>
        <description>North American Industry Classification System Code</description>
        <inlineHelpText>North American Industry Classification System Code</inlineHelpText>
        <label>NAICS Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_NAICS_Name__c</fullName>
        <description>North American Industry Classification System Code</description>
        <inlineHelpText>North American Industry Classification System Code</inlineHelpText>
        <label>NAICS Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Phone__c</fullName>
        <label>Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_SIC_Code__c</fullName>
        <description>Standard Industrial Classification Code</description>
        <inlineHelpText>Standard Industrial Classification Code</inlineHelpText>
        <label>SIC Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_SIC_Name__c</fullName>
        <description>Standard Industrial Classification Code</description>
        <inlineHelpText>Standard Industrial Classification Code</inlineHelpText>
        <label>SIC Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_State_Code__c</fullName>
        <label>State Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_State_Name__c</fullName>
        <label>State Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_TradeName__c</fullName>
        <description>Doing-business-as name</description>
        <inlineHelpText>Doing-business-as name</inlineHelpText>
        <label>Trade Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_HQ_URL__c</fullName>
        <label>Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Company_Name__c</fullName>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Confidence_Level__c</fullName>
        <description>Represents confidence of the data append match. Review, Fail and Not Found will need manual confirmation of data quality.</description>
        <inlineHelpText>Represents confidence of the data append match. Review, Fail and Not Found will need manual confirmation of data quality.</inlineHelpText>
        <label>Reachforce Match Confidence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Country_Name__c</fullName>
        <label>Country Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Employee_Location_Count__c</fullName>
        <description>Total employees at this location</description>
        <inlineHelpText>Total employees at this location</inlineHelpText>
        <label>Employee Location Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Location_Type__c</fullName>
        <description>Single site location, branch, headquarters</description>
        <inlineHelpText>Single site location, branch, headquarters</inlineHelpText>
        <label>Site Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Phone__c</fullName>
        <label>Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_State_Code__c</fullName>
        <label>State Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_State_Name__c</fullName>
        <label>State Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Subsidiary_Code__c</fullName>
        <description>YES = is a subsidiary, NO = not a subsidiary</description>
        <inlineHelpText>YES = is a subsidiary, NO = not a subsidiary</inlineHelpText>
        <label>Subsidiary Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_MS_Trade_Name__c</fullName>
        <description>Doing-business-as name</description>
        <inlineHelpText>Doing-business-as name</inlineHelpText>
        <label>Trade Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Address_1__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Address_2__c</fullName>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Company_Name__c</fullName>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Country_Name__c</fullName>
        <label>Country Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Employee_Total_Count__c</fullName>
        <label>Employee Total Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_NAICS_Code__c</fullName>
        <description>North American Industry Classification System Code</description>
        <inlineHelpText>North American Industry Classification System Code</inlineHelpText>
        <label>NAICS Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_NAICS_Name__c</fullName>
        <description>North American Industry Classification System Code</description>
        <inlineHelpText>North American Industry Classification System Code</inlineHelpText>
        <label>NAICS Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Phone__c</fullName>
        <label>Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>TextArea</type>
    </fields>
</CustomObject>